# Proyecto2-Cifrados

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/controllers/: auth.py  firma.py  group.py  keys.py  messages.py
backend/database/: __init__.py  database.py  db.sqlite  schemas.py
backend/models/: message.py  responses.py  transactions.py  user.py
backend/routes/: __init__.py  auth.py  blockchain.py  firmas.py  grupos.py  mensajes.py
backend/tests/: auth-prod.http  auth.http  groups.http  login.html  messages.http  oauth.html  welcome.html
backend/utils/: auth.py  email_config.py
config/: deploy.yml
database/: __init__.py  database.py  schemas.py
frontend/Proyecto02/: index.html  package-lock.json  package.json
frontend/Proyecto02/src/: App.jsx  index.css  main.jsx
frontend/Proyecto02/src/Components/: GoogleCallback.jsx  PrivateRoute.jsx
frontend/Proyecto02/src/Components/Chat/: ChatPage.jsx  DecryptMessage.jsx
frontend/Proyecto02/src/Components/LoginForm/: LoginForm.jsx
frontend/Proyecto02/src/Pages/Chat/: Home.jsx
frontend/Proyecto02/src/Pages/Login/: Login.jsx
