[project]
name = "proyecto2-cifrados"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography~=44.0.2",
    "fastapi~=0.115.8",
    "passlib==1.7.4",
    "pydantic~=2.10.6",
    "pyjwt~=2.10.1",
    "python-jose==3.4.0",
    "python-multipart~=0.0.20",
    "sqlalchemy~=2.0.38",
    "uvicorn~=0.34.0",
]
